added auth endpoints + fts

--- a/Server/Api/Api.csproj
+++ b/Server/Api/Api.csproj
@@ -28,4 +28,9 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Authentication\Endpoints\" />
+	  <Folder Include="Authentication\Services\" />
+	</ItemGroup>
+
 </Project>
